--- a/tools/toolsSpreadsheets2.html
+++ b/tools/toolsSpreadsheets2.html
@@ -253,6 +253,8 @@
 								<button id="solve1" class="btn btn-sm btn-primary" onclick="solveButton(211,'exerMetaQuest1')">Solve</button>
 								<button id="toggle211" class="btn btn-sm btn-success" onclick="toggleView('toggle211', container-exer211');">View</button>
 								<div id="container-exer211" class="Centered" style="margin-top:5px;">
+									<div id="#container-exer211">
+									</div>
 								</div>
 								<br><br>
 							</div>
